refactor: getter 컬렉션은 불변 객체로 반환