@@ -3,15 +3,16 @@ package store.repository.order;
 import store.domain.vo.Product;
 import store.domain.vo.Quantity;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
 public class OrderRepositoryImpl implements OrderRepository {
-    private final HashMap<Product, Quantity> items = new HashMap<>();
+    private final Map<Product, Quantity> items = new HashMap<>();
 
     @Override
     public Map<Product, Quantity> findAll() {
-        return Map.copyOf(items);
+        return Collections.unmodifiableMap(items);
     }
 
     @Override
